# fluidimage

./: .gitattributes  .gitlab-ci.yml  .hgignore  .hgtags  .readthedocs.yml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGES.md  CHANGES.rst  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  README.rst  bitbucket-pipelines.yml  create_meson_files.py  environment.yml  meson.build  noxfile.py  pixi.toml  pylintrc  pyproject.toml  setup.cfg  setup.py  tox.ini
fluidimage/: __init__.py  _opencv.py  _version.py  base.py  config.py  display.py  meson.build  params_list.py  profile_piv.py  run_from_xml.py  synthetic.py  test_correl.py  test_run_from_xml.py
fluidimage/calcul/: __init__.py  _evaluate_subpix.py  _try_correl_images_diff_sizes.py  _try_correl_images_same_size.py  correl.cu  correl.py  correl_pycuda.py  correl_pythran.py  errors.py  fft.py  meson.build  reduction_kernel.cu  smooth_clean.py  subpix.py  subpix_pythran.py  test_correl.py  test_fft.py
fluidimage/calcul/interpolate/: __init__.py  _bench_tps.py  _bench_tps_matrix.py  _try_cusolve.py  _try_griddata.py  _try_interpolation.py  _try_tps.py  _try_tps_2.py  _try_tps_class.py  _try_tps_subdom.py  griddata.py  meson.build  test_thin_plate_spline.py  thin_plate_spline.py  thin_plate_spline2.py  thin_plate_spline_subdom.py  tps_pythran.py
fluidimage/calibration/: __init__.py  apply_calib.py  calib.py  calib2d_simple.py  calibDirect.py  calibTsai.py  calib_cv.py  calib_direct.py  calib_tsai.py  get_calib.py  meson.build  test_calib_cv.py  test_direct_stereo_reconstruction.py  test_piv_3D.py  test_tsai_calibration.py  try_piv3d.py  util.py
fluidimage/calibration_3d/: apply_calib.py  test_piv_3D.py
fluidimage/data_objects/: __init__.py  display.py  display2.py  display_piv.py  display_pre.py  meson.build  piv.py  piv_results.py  pre_proc.py  preproc.py  surfaceTracking.py  surface_tracking.py  tomo.py
fluidimage/data_objects/old/: surface_tracking.py
fluidimage/executors/: __init__.py  base.py  exec_async.py  exec_async_multiproc.py  exec_async_sequential.py  exec_async_servers.py  exec_sequential.py  multi_exec_async.py  servers.py
fluidimage/experimental/: __init__.py  base_async.py  base_trio.py  connect_server.py  cpu_bounded_task_examples  cpu_bounded_task_examples.py  cpu_bounded_task_examples_pythran.py  piv_async.py  piv_trio.py  testAsync.py
fluidimage/experimental/executors/: __init__.py  base.py  exec_async.py  exec_async_multiproc.py  exec_async_sequential.py  exec_async_servers.py  exec_sequential.py  executor_await.py  executor_base.py  executor_classic.py  multi_exec_async.py  multiexec_async.py  servers.py
fluidimage/experimental/no_topology_computations/: piv_async.py
fluidimage/experimental/topologies/: __init__.py  base.py  bos_new.py  example.py  image2image_new.py  nb_workers.py  piv_new.py  preproc_new.py  test_bos_new.py  test_example.py  test_image2image.py  test_piv_new.py  test_piv_new_multiprocess.py  test_preproc_new.py
fluidimage/fluxes/: __init__.py
fluidimage/gui/: __init__.py  imviewer.py  pg_main.py  pg_wrapper.py  test_imviewer.py  test_imviewer_pg.py
fluidimage/gui/launcher/: Makefile  __init__.py  main.py  mainwindow.py  mainwindow.ui  meson.build  test_launcher.py
fluidimage/old_topo/: __init__.py  base.py  bos.py  image2image.py  piv.py  preproc.py  test_bos.py  test_image2image.py  test_piv.py  test_preproc.py
fluidimage/old_topo/waiting_queues/: base.py
fluidimage/post_proc/: _try_postproc.py  computation_functions.py  displayf.py  piv_Oseen_center01-02.h5  piv_Oseen_center01-02_light.h5  postproc.py
fluidimage/postproc/: __init__.py  _try_postproc.py  computation_functions.py  displayf.py  piv.py  postproc.py  test_piv.py  test_util.py  util.py  vector_field.py
fluidimage/pre_proc/: __init__.py  _toolbox_cv.py  _toolbox_py.py  base.py  io.py  toolbox.py
fluidimage/preproc/: __init__.py  _toolbox_cv.py  _toolbox_py.py  base.py  image2image.py  io.py  test_base.py  test_image2image.py  toolbox.py
fluidimage/reconstruct/: __init__.py
fluidimage/reconstruct/tomo/: __init__.py  mlos.py  test_mlos.py
fluidimage/topo_old/: base.py  bos.py  image2image.py  piv.py  preproc.py  surface_tracking.py  test_bos.py
fluidimage/topo_old/waiting_queues/: base.py
fluidimage/topologies/: __init__.py  _try_topo_piv.py  base.py  base_async.py  bos.py  example.py  image2image.py  launcher.py  log.py  meson.build  nb_cpu_cores.py  optical_flow.py  piv.py  piv_async.py  pre_proc.py  preproc.py  preproc_new.py  surface_tracking.py  testAsync.py  test_bos.py  test_example.py  test_im2im.py  test_image2image.py  test_optical_flow.py  test_piv.py  test_pre_proc.py  test_preproc.py  test_preproc_new.py  test_surface_tracking.py  test_surftrack.py  test_surftracking.py  topology_piv.py
fluidimage/topologies/experimental/: base.py  executer_await.py  executer_await_microservices.py  executer_await_multiproc.py  executer_await_multiproc_2.py  executer_base.py  executer_threads_multiproc.py  nb_workers.py  piv.py  piv_2.py  piv_new.py  server_rpyc.py  simple_socket.py  socket_asycncio.py  topology_example.py
fluidimage/topologies/old/: base.py  bos.py  image2image.py  piv.py  surface_tracking.py  test_bos.py  test_piv.py  test_surface_tracking.py
fluidimage/topologies/waiting_queues/: __init__.py  base.py  series.py
fluidimage/util/: __init__.py  log.py  meson.build  paramlist.py  stats.py  test_util.py  util.py
fluidimage/waiting_queues/: __init__.py  base.py
fluidimage/works/: __init__.py  _try_piv.py  optical_flow.py  piv.py  piv2.py  piv_Oseen_center01-02.h5  piv_Oseen_center01-02_light.h5  pre_proc.py  preproc.py  surface_tracking.py  test_piv.py  with_mask.py
fluidimage/works/old/: surface_tracking.py
fluidimage/works/piv/: __init__.py  _try_piv.py  fix.py  multipass.py  singlepass.py  test_piv.py
src/fluidimage/: __init__.py  _opencv.py  _version.py  bos.py  config.py  conftest.py  image2image.py  meson.build  optical_flow.py  piv.py  preproc.py  run_from_xml.py  synthetic.py  test_run_from_xml.py  uvmat.py
src/fluidimage/calcul/: fft.py  (+13 more)
(+485 files in other folders)
