[bdist_wheel]
universal = 0

[metadata]
license_file = LICENSE.txt

[flake8]
ignore = E501,E225,E226,E303,E201,E202,E203,W503

[coverage:run]
source = ./fluidimage
data_file = .coverage/coverage
omit = */test*.py
       */_try_*.py
       */_bench_*.py
       */_evaluate_*.py
       */more_experimental_executors/*.py
       fluidimage/old_topo/*

[coverage:report]
show_missing = True
exclude_lines =
    raise ValueError
    raise NotImplementedError
    raise ImportError
    except ImportError:
    if test:
    if check:
    if __name__ == "__main__":
    if "sphinx" in sys.modules:

[coverage:html]
directory = .coverage

[coverage:xml]
output = .coverage/coverage.xml
