
[options]
python_requires = >= 3.6
setup_requires =
    setuptools
    setuptools_scm
    transonic >= 0.2.2
    numpy

install_requires =
    fluiddyn >= 0.2.0
    scipy >= 0.14.1
    numpy >= 1.8
    matplotlib >= 1.4.2
    pyfftw >= 0.10.4
    imageio
    scikit-image >= 0.12.3
    h5py
    h5netcdf
    pims
    trio
    dask[array]
    ipython
    opencv-python

[options.extras_require]

doc =
    sphinx
    sphinx_rtd_theme
    numpydoc

test =
    pytest
    pytest-qt
    pyqt5

dev =
    %(doc)s
    %(test)s

[flake8]
ignore = E501,E225,E226,E303,E201,E202,E203,W503

[coverage:run]
source = ./fluidimage
data_file = .coverage/coverage
omit = */test*.py
       */_try_*.py
       */_bench_*.py
       */_evaluate_*.py
       */more_experimental_executors/*.py
       fluidimage/old_topo/*

[coverage:report]
show_missing = True
exclude_lines =
    raise ValueError
    raise NotImplementedError
    raise ImportError
    except ImportError:
    if test:
    if check:
    if __name__ == "__main__":
    if "sphinx" in sys.modules:

[coverage:html]
directory = .coverage

[coverage:xml]
output = .coverage/coverage.xml

[isort]
line_length = 82
known_first_party = fluiddyn,fluiddoc,fluidimage,transonic
multi_line_output = 3
