
python_sources = [
  '__init__.py',
  '_opencv.py',
  '_path_image_samples.py',
  '_version.py',
  'config.py',
  'run_from_xml.py',
  'synthetic.py',
  'test_run_from_xml.py',
]

py.install_sources(
  python_sources,
  subdir: 'fluidimage'
)

subdir('calcul')
subdir('calibration')
subdir('data_objects')
subdir('executors')
subdir('gui')
subdir('postproc')
subdir('preproc')
subdir('reconstruct')
subdir('topologies')
subdir('util')
subdir('works')
