
python_sources = [
  '__init__.py',
  '_opencv.py',
  '_version.py',
  'bos.py',
  'config.py',
  'conftest.py',
  'image2image.py',
  'optical_flow.py',
  'piv.py',
  'run_from_xml.py',
  'synthetic.py',
  'test_image2image.py',
  'test_run_from_xml.py',
]

py.install_sources(
  python_sources,
  subdir: 'fluidimage'
)

subdir('calcul')
subdir('calibration')
subdir('data_objects')
subdir('executors')
subdir('gui')
subdir('postproc')
subdir('preproc')
subdir('reconstruct')
subdir('topologies')
subdir('util')
subdir('works')
