
python_sources = [
  '__init__.py',
  'calib2d_simple.py',
  'calib_cv.py',
  'calib_direct.py',
  'calib_tsai.py',
  'test_calib_cv.py',
  'test_direct_stereo_reconstruction.py',
  'test_tsai_calibration.py',
  'util.py',
]

py.install_sources(
  python_sources,
  subdir: 'fluidimage/calibration'
)
