
python_sources = [
  '__init__.py',
  'base.py',
  'exec_async.py',
  'exec_async_multiproc.py',
  'exec_async_sequential.py',
  'exec_async_servers.py',
  'exec_async_servers_threading.py',
  'exec_sequential.py',
  'multi_exec_async.py',
  'servers.py',
]

py.install_sources(
  python_sources,
  subdir: 'fluidimage/executors'
)
